pdraw-t03/src/ipdrawParser.py
# Generated from ipdraw.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ipdrawParser ( Parser ):

    grammarFileName = "ipdraw.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'position'", "'('", "','", "')'", "';'", 
                     "'down'", "'up'", "'forward'", "'backward'", "'for'", 
                     "'until'", "'{'", "'}'", "'='", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", 
                     "'//'", "'\\\\'", "'and'", "'or'", "'left'", "'right'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INT", "ID", 
                      "BOOL", "ANGLE", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_position = 2
    RULE_penControl = 3
    RULE_move = 4
    RULE_rotation = 5
    RULE_forLoop = 6
    RULE_untilLoop = 7
    RULE_block = 8
    RULE_condition = 9
    RULE_expression = 10
    RULE_assignmentStatement = 11
    RULE_assignmentStatementForLoop = 12
    RULE_relational_operator = 13
    RULE_arithmetic_operator = 14
    RULE_logical_operator = 15
    RULE_rotateDirection = 16
    RULE_value = 17

    ruleNames =  [ "program", "statement", "position", "penControl", "move", 
                   "rotation", "forLoop", "untilLoop", "block", "condition", 
                   "expression", "assignmentStatement", "assignmentStatementForLoop", 
                   "relational_operator", "arithmetic_operator", "logical_operator", 
                   "rotateDirection", "value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    INT=31
    ID=32
    BOOL=33
    ANGLE=34
    WS=35
    COMMENT=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.StatementContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.StatementContext,i)


        def getRuleIndex(self):
            return ipdrawParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ipdrawParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.statement()
                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1610616770) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def position(self):
            return self.getTypedRuleContext(ipdrawParser.PositionContext,0)


        def penControl(self):
            return self.getTypedRuleContext(ipdrawParser.PenControlContext,0)


        def move(self):
            return self.getTypedRuleContext(ipdrawParser.MoveContext,0)


        def rotation(self):
            return self.getTypedRuleContext(ipdrawParser.RotationContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(ipdrawParser.ForLoopContext,0)


        def untilLoop(self):
            return self.getTypedRuleContext(ipdrawParser.UntilLoopContext,0)


        def getRuleIndex(self):
            return ipdrawParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ipdrawParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.position()
                pass
            elif token in [6, 7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 42
                self.penControl()
                pass
            elif token in [8, 9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 43
                self.move()
                pass
            elif token in [29, 30]:
                self.enterOuterAlt(localctx, 4)
                self.state = 44
                self.rotation()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 5)
                self.state = 45
                self.forLoop()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 6)
                self.state = 46
                self.untilLoop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PositionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(ipdrawParser.INT)
            else:
                return self.getToken(ipdrawParser.INT, i)

        def getRuleIndex(self):
            return ipdrawParser.RULE_position

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPosition" ):
                listener.enterPosition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPosition" ):
                listener.exitPosition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPosition" ):
                return visitor.visitPosition(self)
            else:
                return visitor.visitChildren(self)




    def position(self):

        localctx = ipdrawParser.PositionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_position)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(ipdrawParser.T__0)
            self.state = 50
            self.match(ipdrawParser.T__1)
            self.state = 51
            self.match(ipdrawParser.INT)
            self.state = 52
            self.match(ipdrawParser.T__2)
            self.state = 53
            self.match(ipdrawParser.INT)
            self.state = 54
            self.match(ipdrawParser.T__3)
            self.state = 55
            self.match(ipdrawParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PenControlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ipdrawParser.RULE_penControl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPenControl" ):
                listener.enterPenControl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPenControl" ):
                listener.exitPenControl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPenControl" ):
                return visitor.visitPenControl(self)
            else:
                return visitor.visitChildren(self)




    def penControl(self):

        localctx = ipdrawParser.PenControlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_penControl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            _la = self._input.LA(1)
            if not(_la==6 or _la==7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 58
            self.match(ipdrawParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ipdrawParser.INT, 0)

        def getRuleIndex(self):
            return ipdrawParser.RULE_move

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMove" ):
                listener.enterMove(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMove" ):
                listener.exitMove(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMove" ):
                return visitor.visitMove(self)
            else:
                return visitor.visitChildren(self)




    def move(self):

        localctx = ipdrawParser.MoveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_move)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            _la = self._input.LA(1)
            if not(_la==8 or _la==9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 61
            self.match(ipdrawParser.INT)
            self.state = 62
            self.match(ipdrawParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RotationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rotateDirection(self):
            return self.getTypedRuleContext(ipdrawParser.RotateDirectionContext,0)


        def value(self):
            return self.getTypedRuleContext(ipdrawParser.ValueContext,0)


        def getRuleIndex(self):
            return ipdrawParser.RULE_rotation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRotation" ):
                listener.enterRotation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRotation" ):
                listener.exitRotation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRotation" ):
                return visitor.visitRotation(self)
            else:
                return visitor.visitChildren(self)




    def rotation(self):

        localctx = ipdrawParser.RotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_rotation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.rotateDirection()
            self.state = 65
            self.value()
            self.state = 66
            self.match(ipdrawParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStatement(self):
            return self.getTypedRuleContext(ipdrawParser.AssignmentStatementContext,0)


        def condition(self):
            return self.getTypedRuleContext(ipdrawParser.ConditionContext,0)


        def assignmentStatementForLoop(self):
            return self.getTypedRuleContext(ipdrawParser.AssignmentStatementForLoopContext,0)


        def block(self):
            return self.getTypedRuleContext(ipdrawParser.BlockContext,0)


        def getRuleIndex(self):
            return ipdrawParser.RULE_forLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForLoop" ):
                listener.enterForLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForLoop" ):
                listener.exitForLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForLoop" ):
                return visitor.visitForLoop(self)
            else:
                return visitor.visitChildren(self)




    def forLoop(self):

        localctx = ipdrawParser.ForLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_forLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(ipdrawParser.T__9)
            self.state = 69
            self.match(ipdrawParser.T__1)
            self.state = 70
            self.assignmentStatement()
            self.state = 71
            self.match(ipdrawParser.T__4)
            self.state = 72
            self.condition()
            self.state = 73
            self.match(ipdrawParser.T__4)
            self.state = 74
            self.assignmentStatementForLoop()
            self.state = 75
            self.match(ipdrawParser.T__3)
            self.state = 76
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UntilLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(ipdrawParser.ConditionContext,0)


        def block(self):
            return self.getTypedRuleContext(ipdrawParser.BlockContext,0)


        def getRuleIndex(self):
            return ipdrawParser.RULE_untilLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUntilLoop" ):
                listener.enterUntilLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUntilLoop" ):
                listener.exitUntilLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUntilLoop" ):
                return visitor.visitUntilLoop(self)
            else:
                return visitor.visitChildren(self)




    def untilLoop(self):

        localctx = ipdrawParser.UntilLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_untilLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(ipdrawParser.T__10)
            self.state = 79
            self.match(ipdrawParser.T__1)
            self.state = 80
            self.condition()
            self.state = 81
            self.match(ipdrawParser.T__3)
            self.state = 82
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.StatementContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.StatementContext,i)


        def getRuleIndex(self):
            return ipdrawParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = ipdrawParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(ipdrawParser.T__11)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1610616770) != 0):
                self.state = 85
                self.statement()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 91
            self.match(ipdrawParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ipdrawParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ipdrawParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = ipdrawParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.ExpressionContext,i)


        def logical_operator(self):
            return self.getTypedRuleContext(ipdrawParser.Logical_operatorContext,0)


        def value(self):
            return self.getTypedRuleContext(ipdrawParser.ValueContext,0)


        def arithmetic_operator(self):
            return self.getTypedRuleContext(ipdrawParser.Arithmetic_operatorContext,0)


        def relational_operator(self):
            return self.getTypedRuleContext(ipdrawParser.Relational_operatorContext,0)


        def getRuleIndex(self):
            return ipdrawParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ipdrawParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.state = 96
                self.match(ipdrawParser.T__1)
                self.state = 97
                self.expression(0)
                self.state = 98
                self.match(ipdrawParser.T__3)
                self.state = 99
                self.logical_operator()
                self.state = 100
                self.match(ipdrawParser.T__1)
                self.state = 101
                self.expression(0)
                self.state = 102
                self.match(ipdrawParser.T__3)
                pass
            elif token in [31, 32, 33, 34]:
                self.state = 104
                self.value()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 117
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 115
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = ipdrawParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 107
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 108
                        self.arithmetic_operator()
                        self.state = 109
                        self.expression(5)
                        pass

                    elif la_ == 2:
                        localctx = ipdrawParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 111
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 112
                        self.relational_operator()
                        self.state = 113
                        self.expression(4)
                        pass

             
                self.state = 119
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ipdrawParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(ipdrawParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ipdrawParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStatement(self):

        localctx = ipdrawParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(ipdrawParser.ID)
            self.state = 121
            self.match(ipdrawParser.T__13)
            self.state = 122
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementForLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ipdrawParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(ipdrawParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ipdrawParser.RULE_assignmentStatementForLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatementForLoop" ):
                listener.enterAssignmentStatementForLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatementForLoop" ):
                listener.exitAssignmentStatementForLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatementForLoop" ):
                return visitor.visitAssignmentStatementForLoop(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStatementForLoop(self):

        localctx = ipdrawParser.AssignmentStatementForLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assignmentStatementForLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(ipdrawParser.ID)
            self.state = 125
            self.match(ipdrawParser.T__13)
            self.state = 126
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Relational_operatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ipdrawParser.RULE_relational_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelational_operator" ):
                listener.enterRelational_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelational_operator" ):
                listener.exitRelational_operator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelational_operator" ):
                return visitor.visitRelational_operator(self)
            else:
                return visitor.visitChildren(self)




    def relational_operator(self):

        localctx = ipdrawParser.Relational_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_relational_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2064384) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arithmetic_operatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ipdrawParser.RULE_arithmetic_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmetic_operator" ):
                listener.enterArithmetic_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmetic_operator" ):
                listener.exitArithmetic_operator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmetic_operator" ):
                return visitor.visitArithmetic_operator(self)
            else:
                return visitor.visitChildren(self)




    def arithmetic_operator(self):

        localctx = ipdrawParser.Arithmetic_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_arithmetic_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 132120576) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_operatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ipdrawParser.RULE_logical_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_operator" ):
                listener.enterLogical_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_operator" ):
                listener.exitLogical_operator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_operator" ):
                return visitor.visitLogical_operator(self)
            else:
                return visitor.visitChildren(self)




    def logical_operator(self):

        localctx = ipdrawParser.Logical_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_logical_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            _la = self._input.LA(1)
            if not(_la==27 or _la==28):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RotateDirectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ipdrawParser.RULE_rotateDirection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRotateDirection" ):
                listener.enterRotateDirection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRotateDirection" ):
                listener.exitRotateDirection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRotateDirection" ):
                return visitor.visitRotateDirection(self)
            else:
                return visitor.visitChildren(self)




    def rotateDirection(self):
